--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		  <span id="ip"></span>
 	    </div>
 		<div style="margin-top:10rem; text-align:center">
-			<a href="./wireguard.html">WireGuard</a>
+			<a href="./wireguard">WireGuard</a>
 		</div>
 	</div>
   </body>
